# AndroidNativeCI

./: settings.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/androidTest/java/cn/ylarod/nativeci/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/cn/ylarod/nativeci/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/ylarod/nativeci/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
